src/objects/Account/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to associate a child account with its parent account.</description>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>ChildAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>