src/objects/Account/fields/X2023_ticket_issue__c.field-meta.xml
<CustomField>
    <fullName>X2023_ticket_issue__c</fullName>
    <label>2023_ticket_issue</label>
    <length>20</length>
    <type>Text</type>
</CustomField>