src/objects/Account/recordTypes/Core_A_S.recordType-meta.xml
<RecordType>
    <fullName>Core_A_S</fullName>
    <active>true</active>
    <description>Core_A_S</description>
    <label>Core_A_S</label>
</RecordType>